# claudecrawl

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
env/: dev.env
notebooks/: baseline-scraper.ipynb  claude-crawl-scraper.ipynb  firecrawl-scraper.ipynb  playwright-scraper.ipynb
output/: output.jsonl
src/: crawler.py  llm.py  logger.py  prompt.py  scraper.py
